# Industrial-Machine-Monitoring-System

./: .gitattributes  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  SECURITY.md  SETUP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/Industrialmonitor/: Dockerfile  pom.xml
backend/Industrialmonitor/src/main/java/com/industrialmonitor/industrialmonitor/: IndustrialmonitorApplication.java
backend/Industrialmonitor/src/main/java/com/industrialmonitor/industrialmonitor/config/: AppConfig.java  KafkaConfig.java  (+1 more)
backend/Industrialmonitor/src/main/resources/: application.yml
backend/Industrialmonitor/src/test/java/com/industrialmonitor/industrialmonitor/: IndustrialmonitorApplicationTests.java
backend/java8/src/DefaultMethod/: WhatsApp.java  demo.java
backend/java8/src/Lambdas/: exe2.java  exercise1.java
dashboard/: AlertModel.cpp  AlertModel.h  BUILD_FIX.md  BackendBridge.cpp  BackendBridge.h  CMakeLists.txt  CRITICAL_FIX.md  FINAL_FIX.md  FIX_SUMMARY.md  MachineModel.cpp  MachineModel.h  QUICK_FIX.txt  RUNTIME_FIX.md  debug_run.bat  main.cpp  main.qml  main_test.qml  rebuild.bat
dashboard/qml/components/: AlertItem.qml  LiveChart.qml  MachineCard.qml  SectionTitle.qml
dashboard/qml/layout/: RightPanel.qml  Sidebar.qml  TopBar.qml
dashboard/qml/pages/: Dashboard.qml
infra/: docker-compose.yml  init.sql
simulator/: Dockerfile  config.py  mqtt_publisher.py  sensor_simulator.py
(+28 files in other folders)
